--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 const DATA_URL = 'https://gist.githubusercontent.com/diondree/92e4518ca7529e1f4d1300993e5cc287/raw/5e689bb33a11a2e55cb11e6f413ddea14c4be804/mock-data-10000.json';
 const CACHE_KEY = 'mockData10k';
 const CACHE_TIME_KEY = 'mockData10k_time';
-const CACHE_DURATION = 1000 * 60 * 60 * 24; // 24 hours
+const CACHE_DURATION = 1000 * 60 * 10; // 10 mins
 const MAX_ROWS = 10000;
 const ROW_HEIGHT = 32; // px
 const VISIBLE_ROWS = 24; // Number of rows to render at once
